// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render label widget 1`] = `
<div>
  <div
    class="makeStyles-propertySection-2"
  >
    <div
      class="makeStyles-propertySectionLabel-4"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-7 MuiTypography-subtitle2"
      >
        myLabel
      </h6>
    </div>
    <p
      class="MuiTypography-root makeStyles-style-1 makeStyles-style-3 MuiTypography-body1"
    >
      theLabelValue
    </p>
  </div>
</div>
`;

exports[`render label widget with help hint 1`] = `
<div>
  <div
    class="makeStyles-propertySection-16"
  >
    <div
      class="makeStyles-propertySectionLabel-18"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-21 MuiTypography-subtitle2"
      >
        myLabel
      </h6>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
        focusable="false"
        style="margin-left: 8px; font-size: 16px;"
        title=""
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
        />
      </svg>
    </div>
    <p
      class="MuiTypography-root makeStyles-style-15 makeStyles-style-17 MuiTypography-body1"
    >
      theLabelValue
    </p>
  </div>
</div>
`;

exports[`render label widget with style 1`] = `
<div>
  <div
    class="makeStyles-propertySection-9"
  >
    <div
      class="makeStyles-propertySectionLabel-11"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-14 MuiTypography-subtitle2"
      >
        myLabel
      </h6>
    </div>
    <p
      class="MuiTypography-root makeStyles-style-8 makeStyles-style-10 MuiTypography-body1"
    >
      theLabelValue
    </p>
  </div>
</div>
`;
